# modeler-rs

./: Cargo.toml  README.md
examples/: cube.rs  teapot.rs
models/: random.blend  twocubes.blend
src/: application.rs  buffer.rs  camera.rs  cube.rs  lib.rs  logging.rs  main.rs  model.rs  models.rs  state.rs  teapot.rs
src/controls/: mod.rs  mouse.rs
src/env/: mod.rs  modeling.rs  sketcher.rs
src/environment/: mod.rs  modeling.rs  sketcher.rs
src/formats/: mod.rs  wavefront.rs
src/model/: block.rs  entity.rs  extrude.rs  mod.rs  model.rs  plane.rs  sketch.rs
src/modes/: mod.rs
src/prelude/: buffer.rs  mod.rs  point.rs  vertex.rs
src/renderer/: buffer.rs  program.rs  renderer.rs  vertex_array.rs
src/renderer/shaders/: fragment.glsl  vertex.glsl
src/shaders/: fragment.glsl  mod.rs  vertex.glsl
src/support/: camera.rs  mod.rs  state.rs  teapot.rs
src/ui/: menu.rs  mod.rs
