[package]
name = "modeler"
version = "0.1.0"
description = "3D modeling app in opengl for CMPSC 457"
authors = ["Patrick Miller"]
repository = "https://github.com/paddymills/modeler-rs"
keywords = ["OpenGL", "3D Modeling"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gl = "0.14.0"
# glutin = "0.31.1"
glutin = "0.29.1"
gl = "0.14.0"