[package]
name = "phobia"
version = "0.1.0"
description = "3D modeling app in opengl for CMPSC 457"
authors = ["Patrick Miller"]
repository = "https://github.com/paddymills/modeler-rs"
keywords = ["OpenGL", "3D Modeling"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.31"
glutin-winit = "0.4"
glium = { version = "0.33", git = "https://github.com/glium/glium" }
winit = "0.29"

obj = { version = "0.10", features = ["genmesh"] }
native-dialog = "0.7.0"
