[package]
name = "phobia"
version = "0.1.0"
description = "3D modeling app in opengl for CMPSC 457"
authors = ["Patrick Miller"]
repository = "https://github.com/paddymills/modeler-rs"
keywords = ["OpenGL", "3D Modeling"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "phobia"

[dependencies]
glutin = "0.31"
glutin-winit = "0.4"
glium = "0.33.0"
winit = "0.28"

obj = { version = "0.10", features = ["genmesh"] }
native-dialog = "0.7.0"
egui_glium = "0.23.0"
egui = "0.23.0"

# logging
fern = "0.6.2"
log = "0.4.20"
chrono = "0.4.31"
itertools = "0.12.0"


